framec_tests/language_specific/typescript/v3_capabilities/system_params/negative/system_params_duplicate_decl_v3.frm
@target typescript

// @expect: E111
// @core

system SystemParamsDupTs(color, color) {
    machine:
        $Red(color) { }
}
